--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
     "name": "Look it Up",
     "description": "Search English Words on an Online Dictionary",
-    "version": "1.0.1",
+    "version": "1.2.0",
     "manifest_version": 2,
     "permissions":["contextMenus","storage"],
     "background":
-	{
-		"scripts": ["background.js"]
-	},
-	"browser_action":
-	{
-		"default_popup":"popup/index.html"
-	}
+    {
+        "scripts": ["background.js"]
+    },
+    "options_ui":
+    {
+        "page": "options/index.html"
+    }
 }
